# son

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
son/: console.py  database.py  main.py  media.py  settings.py
son/commands/: completion.py  play.py  pomodoro.py  to_wav.py
son/commands/playlist/: __init__.py  add_songs.py  clear.py  create.py  delete.py  describe.py  list.py  play.py  remove_songs.py  rename.py  utils.py
