[tool.poetry]
name = "son"
version = "0.1.0"
description = "A terminal audio player"
authors = ["le_woudar <rollandkev@yahoo.fr>"]
readme = "README.md"

classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Terminals",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: Implementation :: PyPy"
]

packages = [
    { include = "son" }
]

include = ["son/sounds/alarm.wav"]

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
click-didyoumean = "^0.3.1"
shellingham = "^1.5.4"
nava = "^0.5"
rich = "^13.7.1"
pydantic-settings = "^2.2.1"

[tool.poetry.scripts]
son = "son.main:cli"

[tool.poetry.group.lint.dependencies]
ruff = "^0.4.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"
commitizen = "^3.24.0"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
extend-select = [
    "UP", # pyupgrade
    "I", # isort
    "S", # flake8-bandit
    "B", # flake8-bugbear
    "C90", # McCabe complexity
    "RUF"
]

[tool.ruff.format]
quote-style = "single"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver"
version_provider = "poetry"
major_version_zero = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
